# neem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: 2_hello_user.nm  3_fizzbuzz.nm  4_scope.nm  5_closure.nm  6_fib.nm
grammer/: lexer_grammer.md  parser_grammer.md
scripts/: ast_generator.py  expr.txt  stmt.txt
src/: ast_printer_test.cpp  colors.h  common.h  common.hpp  neem.cpp
src/Ast/: expr.cpp  expr.h  expr.hpp  expr_fwd.h  expr_fwd.hpp  stmt.cpp  stmt.h  stmt.hpp  stmt_fwd.h  stmt_fwd.hpp
src/Callable/: native_functions.cpp  native_functions.hpp  neem_callable.hpp  neem_callable_fwd.hpp  neem_function.cpp  neem_function.hpp
src/Environment/: environment.cpp  environment.h  environment.hpp
src/Error/: error_reporter.h  error_reporter.hpp  interpreter_error_reporter.cpp  interpreter_error_reporter.h  interpreter_error_reporter.hpp  lexer_error_reporter.cpp  lexer_error_reporter.h  lexer_error_reporter.hpp  neem_runtime_error.cpp  neem_runtime_error.h  neem_runtime_error.hpp  parse_error.cpp  parse_error.h  parse_error.hpp  parser_error_reporter.cpp  parser_error_reporter.h  parser_error_reporter.hpp
src/Lexer/: grammer.md  lexer.cpp  lexer.h  lexer.hpp
src/Nv/Nv_Variant/: literal.cpp  literal.hpp  neem_value.cpp  neem_value.hpp
src/Parser/: grammer.md  parser.cpp  parser.h  parser.hpp
src/Token/: token.cpp  token.h  token.hpp  token_type.h
src/Variant/: literal.cpp  literal.h  literal.hpp  neem_value.cpp  neem_value.h  neem_value.hpp
src/Visitor/: ast_printer.cpp  ast_printer.h  ast_printer.hpp  interpreter.cpp  interpreter.h  interpreter.hpp  mutable_state_visitor.h  mutable_state_visitor.hpp  resolver.cpp  resolver.hpp
